[package]
name = "livefeedback"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros", "rustls", "auto-send", "ctrlc_handler" ], default-features = false }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
# sea-orm = { version = "0.11.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json", "mock" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
# serde_json = "1.0.93"
futures = "0.3.26"
async-trait = "0.1.64"
async_once = "0.2.6"
lazy_static = "1.4.0"
dotenvy = "0.15.6"
